editors/tree-sitter/grammar.js
    source_file: ($) =>
      choice(
        optional($._newline),
        seq(
          optional($._newline),
          $._file_content,
          optional($._file_separator),
        ),
      ),

    _file_content: ($) =>
      choice(
        seq(
          $.package_directive,
          optional(seq($._file_separator, $._imports_and_declarations)),
        ),
        $._imports_and_declarations,
      ),

    package_directive: ($) => seq("package", $.qualified_name),

    import_directive: ($) =>
      seq(
        "import",
        field("target", $.import_target),
        optional(seq("as", field("alias", $.identifier))),
      ),

    import_target: ($) =>
      seq(
        $.identifier,
        repeat(seq(".", $.identifier)),
        optional(".*"),
      ),

    qualified_name: ($) =>
      prec.left(seq($.identifier, repeat(seq(".", $.identifier)))),

    variable_declaration: ($) =>
      seq(
        field("kind", choice("val", "var")),
        field("name", $.identifier),
        optional($.type_annotation),
        "=",
        field("value", $.expression),
      ),

    constant_declaration: ($) =>
      seq(
        "const",
        "val",
        field("name", $.identifier),
        optional($.type_annotation),
        "=",
        field("value", $.expression),
      ),

    type_annotation: ($) => seq(":", field("type", $._type)),

    function_declaration: ($) =>
      seq(
        "fun",
        optional($.type_parameter_list),
        field("name", $.identifier),
        $.value_parameter_list,
        choice(
          seq(
            ":",
            field("return_type", $._type),
            optional(choice($.expression_body, $.block)),
          ),
          optional($.block),
        ),
      ),

    expression_body: ($) => seq("=", field("value", $.expression)),

    type_parameter_list: ($) =>
      seq("<", commaSep1($.type_parameter), ">"),

    type_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("bound", $._type))),
      ),

    value_parameter_list: ($) =>
      seq("(", optional(commaSep1($.value_parameter)), ")"),

    value_parameter: ($) =>
      seq(
        optional($.parameter_mode),
        field("name", $.identifier),
        ":",
        field("type", $._type),
      ),

    parameter_mode: () => choice("borrow", "inout"),

    classifier_declaration: ($) =>
      choice(
        $.value_class_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_class_declaration,
        $.object_declaration,
      ),

    value_class_declaration: ($) =>
      seq(
        "value",
        "class",
        field("name", $.identifier),
        optional($.type_parameter_list),
        $.value_primary_constructor,
        optional($.supertype_list),
        optional($.class_body),
      ),

    interface_declaration: ($) =>
      seq(
        "interface",
        field("name", $.identifier),
        optional($.type_parameter_list),
        optional($.supertype_list),
        optional($.interface_body),
      ),

    enum_class_declaration: ($) =>
      seq(
        "enum",
        "class",
        field("name", $.identifier),
        optional($.type_parameter_list),
        optional($.supertype_list),
        $.enum_body,
      ),

    object_declaration: ($) =>
      seq(
        "object",
        field("name", $.identifier),
        optional($.supertype_list),
        optional($.object_body),
      ),

    value_primary_constructor: ($) => seq("(", commaSep1($.class_field), ")"),

    class_field: ($) =>
      seq(
        optional($.visibility_modifier),
        field("kind", choice("val", "var")),
        field("name", $.identifier),
        ":",
        field("type", $._type),
      ),

    interface_body: ($) =>
      classBody($, choice($.interface_method_declaration, $.companion_object)),

    object_body: ($) =>
      classBody($, choice($.method_declaration, $._object_constant_declaration)),

    method_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        optional("override"),
        $.function_declaration,
      ),

    interface_method_declaration: ($) =>
      seq(optional("public"), $.function_declaration),

    _object_constant_declaration: ($) =>
      seq(optional($.visibility_modifier), $.constant_declaration),

    enum_body: ($) =>
      seq(
        "{",
        optional($._newline),
        $.enum_variant,
        repeat(
          seq(",", optional($._newline), $.enum_variant),
        ),
        choice(
          seq(optional($._newline), "}"),
          seq(
            optional($._newline),
            ";",
            repeat($._member_separator),
            $.enum_member,
            repeat(choice($._member_separator, $.enum_member)),
            "}",
          ),
        ),
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", commaSep1($.enum_variant_parameter), ")")),
      ),

    enum_member: ($) =>
      choice($.method_declaration, $.companion_object),

    block: ($) =>
      prec(1, seq("{", repeat(choice($._newline, $._statement)), "}")),

    _statement: ($) =>
      choice(
        $.local_variable_statement,
        $.local_destructuring_statement,
        $.while_statement,
        $.for_statement,
        $.loop_statement,
        $.block,
        $.expression_statement,
      ),

    local_variable_statement: ($) => $.variable_declaration,

    expression_statement: ($) => $.expression,

    while_statement: ($) =>
      seq("while", "(", field("condition", $.expression), ")", $.block),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field("binding", $.for_binding),
        "in",
        field("source", $.expression),
        ")",
        $.block,
      ),

    for_binding: ($) =>
      choice(
        $.identifier,
        seq("(", commaSep1(field("name", $.identifier)), ")"),
      ),

    loop_statement: ($) => seq("loop", $.block),

    expression: ($) =>
      choice(
        $.assignment_expression,
        $.binary_expression,
        $.cast_expression,
        $.prefix_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.postfix_expression,
        $.callable_reference,
        $._primary_expression,
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $.expression),
          field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.OR, "||"],
        [PREC.AND, "&&"],
        [PREC.EQUALITY, choice("==", "!=")],
        [PREC.COMPARISON, choice("<", ">", "<=", ">=" )],
        [PREC.MEMBERSHIP, choice("in", "!in")],
        [PREC.ELVIS, "?:"],
        [PREC.TO, alias("to", $.to_operator)],
        [PREC.RANGE, choice("..", "..<")],
        [PREC.ADDITIVE, choice("+", "-")],
        [PREC.MULTIPLICATIVE, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          (operator === "?:" ? prec.right : prec.left)(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
        prec.left(
          PREC.MEMBERSHIP,
          seq(
            field("left", $.expression),
            field("operator", choice("is", "!is")),
            field("right", $._type),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("function", $.expression),
          optional($.call_type_arguments),
          $.argument_list,
        ),
      ),

    call_type_arguments: ($) => seq("<", commaSep1($._type), ">"),

    argument_list: ($) => seq("(", optional(commaSep1($.call_argument)), ")"),

    call_argument: ($) =>
      seq(
        optional($.named_argument_prefix),
        optional($.argument_mode),
        field("value", $.expression),
      ),

    named_argument_prefix: ($) => seq(field("name", $.identifier), "="),

    argument_mode: () => choice("borrow", "&"),

    index_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("value", $.expression), "[", field("index", $.expression), "]"),
      ),

    member_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("value", $.expression),
          field("operator", choice(".", "?.")),
          field("name", $.identifier),
        ),
      ),

    postfix_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("value", $.expression), field("operator", choice("!!", "?"))),
      ),

    callable_reference: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq("::", field("name", $.identifier)),
          seq(field("value", $.expression), "::", field("name", $.identifier)),
        ),
      ),

    _primary_expression: ($) =>
      choice(
        $.identifier,
        $.integer_literal,
        $.float_literal,
        $.character_literal,
        $.boolean_literal,
        $.null_literal,
        $.this_expression,
        $.grouped_expression,
        $.string_literal,
        $.lambda_expression,
        $.if_expression,
        $.when_expression,
        $.jump_expression,
        $.super_expression,
      ),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.string_content,
            $.escape_sequence,
            $.interpolation,
            alias(token.immediate("$"), $.string_content),
          ),
        ),
        '"',
      ),

    string_content: () => token.immediate(/[^"\\$\r\n]+/),
    escape_sequence: () => token.immediate(/\\[\\'"nrt0$]/),
    interpolation: ($) => seq(token.immediate("${"), $.expression, "}"),

    lambda_expression: ($) =>
      seq(
        optional("move"),
        "{",
        optional($.lambda_header),
        repeat(choice($._newline, $._lambda_element)),
        "}",
      ),

    lambda_header: ($) => seq(optional(commaSep1($.identifier)), "->"),

    _lambda_element: ($) =>
      choice(
        $.local_variable_statement,
        $.local_destructuring_statement,
        $.block,
        $.expression_statement,
      ),

    if_expression: ($) =>
      prec.right(seq(
        "if",
        "(",
        field("condition", $.expression),
        ")",
        field("consequence", $.control_body),
        optional(
          seq(
            "else",
            field("alternative", $.control_body),
          ),
        ),
      )),

    when_expression: ($) =>
      seq(
        "when",
        optional(seq("(", field("subject", $.expression), ")")),
        "{",
        repeat(choice($._member_separator, $.when_entry)),
        "}",
      ),

    when_entry: ($) =>
      seq(
        choice(seq(commaSep1($.when_condition)), "else"),
        "->",
        field("body", $.control_body),
      ),

    when_condition: ($) =>
      choice(
        $.expression,
        seq(choice("is", "!is"), $._type),
        seq(choice("in", "!in"), $.expression),
      ),

    control_body: ($) => choice($.expression, $.control_block),

    jump_expression: ($) =>
      choice(
        prec.right(seq("return", optional($.expression))),
        "break",
        "continue",
      ),

    _type: ($) => choice($.qualified_type, $.function_type),

    qualified_type: ($) =>
      prec.right(seq(
        field("name", $.qualified_name),
        optional($.type_arguments),
        optional("?"),
      )),

    function_type: ($) =>
      seq(
        optional("move"),
        "(",
        optional(commaSep1($.function_type_parameter)),
        ")",
        "->",
        field("return_type", $._type),
      ),

    function_type_parameter: ($) =>
      seq(optional($.parameter_mode), field("type", $._type)),

    integer_literal: () => token(/[0-9]+(?:L|[uU]L?)?/),
    float_literal: () => token(/[0-9]+(?:\.[0-9]+[fF]?|[fF])/),
    character_literal: () => token(/'(?:\\[\\'"nrt0]|[^'\r\n\\])'/),
    _newline: () => /\n+/,
    _file_separator: ($) =>
      choice($._newline, prec.right(seq(";", optional($._newline)))),
    _member_separator: ($) =>
      choice($._newline, prec.right(seq(";", optional($._newline)))),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function classBody($, member) {
  return seq(
    "{",
    repeat(choice($._member_separator, member)),
    "}",
  );
}
